<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="enter_the_number_of_pax">Enter the number of pax</string>
    <string name="discount">Discount(%)</string>
    <string name="enter_the_discount">Enter the discount</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
    <string name="no_svs">No SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
</resources>